--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <title>Chat App</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <title>Chat-Slack</title>
   </head>
-  <body>
+  <body class="h-100 bg-light">
     <div class="h-100">
       <div class="h-100" id="root"></div>
     </div>
