--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <title>Chat-Slack</title>
+    <title>Chat App</title>
   </head>
   <body class="h-100 bg-light">
     <div class="h-100">
